Employee portal Ui alignment and text fixes

--- a/src/app/landing/dashboard/dashboard.component.scss
+++ b/src/app/landing/dashboard/dashboard.component.scss
@@ -101,7 +101,7 @@
 }
 
 .scroll-container4 {
-  height: 270px;
+  height: 338px;
   overflow-y: auto;
   scrollbar-width: thin;
   /* For Firefox */
@@ -138,7 +138,7 @@
 
     .text-container {
       color: #92278F;
-      font-size: 15px;
+      font-size: 13px;
     }
   }
 
